# hyperwisper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  index.html  overlay.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: dev.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: gamemode.rs  history.rs  installer.rs  lib.rs  main.rs  recording.rs  settings.rs  state.rs  system.rs  tray.rs
src-tauri/src/audio/: mod.rs  recorder.rs  resampler.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/paste/: mod.rs
src-tauri/src/whisper/: downloader.rs  engine.rs  mod.rs  models.rs
src/components/: Logo.tsx  Sidebar.tsx  Topbar.tsx
src/entries/: overlay.tsx  settings.tsx
src/i18n/: index.tsx
src/i18n/locales/: de.ts  en.ts  es.ts  fr.ts  pt.ts
src/lib/: datetime.ts  events.ts  ipc.ts  sounds.ts  theme.ts  toasts.ts  useTrayLabels.ts
src/styles/: globals.css
src/windows/installer/: InstallerApp.tsx  UninstallerApp.tsx
src/windows/overlay/: OverlayApp.tsx
src/windows/settings/: SettingsApp.tsx
src/windows/settings/onboarding/: OnboardingWizard.tsx
src/windows/settings/panels/: AboutPanel.tsx  AccountPanel.tsx  AudioPanel.tsx  GeneralPanel.tsx  HistoryPanel.tsx  HotkeyEditor.tsx  LanguageSection.tsx  ModelsPanel.tsx  SettingsPanel.tsx  ShortcutsPanel.tsx  common.tsx  toggle.tsx
