[package]
name = "hyperwisper"
version = "0.1.0"
description = "Local voice-to-text dictation app — Superwhisper alternative"
authors = ["Mathew Simon"]
edition = "2021"

[lib]
name = "hyperwisper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
once_cell = "1.19"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

dirs = "5"
winreg = "0.52"

# Phase 2: audio capture
cpal = "0.15"
rubato = "0.15"

# Phase 3: Whisper local transcription (whisper.cpp bindings)
whisper-rs = { version = "0.16", default-features = false }
num_cpus = "1"

# Phase 3: model download (HuggingFace)
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
futures-util = "0.3"

# Phase 5: clipboard + paste simulation
arboard = "3"
enigo = "0.3"

[features]
# Vulkan ships by default — the dev machine has the SDK and the runtime is
# already present on every Windows 10+ box. CUDA stays opt-in (requires a
# heavier toolchain install).
default = ["gpu-vulkan"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-vulkan = ["whisper-rs/vulkan"]
